--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-register": "^6.18.0",
     "babel-standalone": "^6.21.1-0",
     "brace": "^0.9.0",
+    "chokidar": "^1.6.1",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "del": "^2.2.2",
@@ -41,6 +42,7 @@
     "html-webpack-inline-chunk-plugin": "^1.0.0",
     "html-webpack-plugin": "^2.24.1",
     "node-dir": "^0.1.16",
+    "node-watch": "^0.4.1",
     "path": "^0.12.7",
     "postcss-loader": "^1.2.1",
     "react": "^15.4.1",
